добавил footer попробывать

--- a/work 5/index.html
+++ b/work 5/index.html
@@ -37,5 +37,10 @@
       </div>
     </section>
   </main>
+  <footer>
+    <div class="the-end">
+      конец
+    </div>
+  </footer>
 </body>
 </html>
